added list duplicates
