# internal/routes/operations.go
@@ -9,7 +9,7 @@ import (
 )
 
 func OperationsRouter(router *mux.Router, service service.Service) {
-	// swagger:operation GET /accumulate listAccumulatedFamilies
+	// swagger:operation GET /accumulators listAccumulatedFamilies
 	//
 	// Lists the most accumulated aged Families.
 	//
@@ -33,8 +33,8 @@ func OperationsRouter(router *mux.Router, service service.Service) {
 	//   default:
 	//     schema:
 	//       "$ref": "#/definitions/ListAccumulatedFamiliesResponse"
-	router.HandleFunc("/accumulate", ListAccumulatedFamiliesHandler(service)).Methods("GET")
-	// swagger:operation GET /growing listGrowingFamilies
+	router.HandleFunc("/accumulators", ListAccumulatedFamiliesHandler(service)).Methods("GET")
+	// swagger:operation GET /growths listGrowingFamilies
 	//
 	// Lists the fastest growing Families.
 	//
@@ -58,7 +58,32 @@ func OperationsRouter(router *mux.Router, service service.Service) {
 	//   default:
 	//     schema:
 	//       "$ref": "#/definitions/ListFastestGrowingFamiliesResponse"
-	router.HandleFunc("/growing", ListFastestGrowingFamiliesHandler(service)).Methods("GET")
+	router.HandleFunc("/growths", ListFastestGrowingFamiliesHandler(service)).Methods("GET")
+	// swagger:operation GET /duplicates listDuplicates
+	//
+	// Lists the possible duplicated members.
+	//
+	// ---
+	// produces:
+	// - application/json
+	// parameters:
+	// - name: offset
+	//   in: query
+	//   description: offset number of results to return
+	//   required: false
+	//   type: integer
+	//   format: int32
+	// - name: limit
+	//   in: query
+	//   description: maximum number of results to return
+	//   required: false
+	//   type: integer
+	//   format: int32
+	// responses:
+	//   default:
+	//     schema:
+	//       "$ref": "#/definitions/ListPossibleDuplicatesMembersResponse"
+	router.HandleFunc("/duplicates", ListPossibleDuplicatesMembersHandler(service)).Methods("GET")
 }
 
 func ListAccumulatedFamiliesHandler(svc service.Service) http.HandlerFunc {
@@ -110,6 +135,35 @@ func ListFastestGrowingFamiliesHandler(svc service.Service) http.HandlerFunc {
 		}
 
 		resp, err := svc.ListFastestGrowingFamilies(ctx, &req)
+		if err != nil {
+			WriteError(ctx, w, err)
+			return
+		}
+
+		Write(ctx, w, resp.Code, resp)
+	}
+}
+
+func ListPossibleDuplicatesMembersHandler(svc service.Service) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx := r.Context()
+
+		req := service.ListPossibleDuplicatesMembersRequest{}
+		if limit := r.URL.Query().Get("limit"); limit != "" {
+			if val, err := strconv.Atoi(limit); err == nil {
+				o := uint32(val)
+				req.Limit = &o
+			}
+		}
+
+		if offset := r.URL.Query().Get("offset"); offset != "" {
+			if val, err := strconv.Atoi(offset); err == nil {
+				o := uint32(val)
+				req.Offset = &o
+			}
+		}
+
+		resp, err := svc.ListPossibleDuplicatesMembers(ctx, &req)
 		if err != nil {
 			WriteError(ctx, w, err)
 			return
